node/subsystem/dispatch-gen/tests/ui/err-02-missing-from.stderr
error[E0308]: mismatched types
  --> $DIR/err-02-missing-from.rs:29:1
   |
29 | #[subsystem_dispatch_gen(Event)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | expected enum `Inner`, found struct `Intermediate`
   | help: try using a variant of the expected enum: `Inner::Bar(#[subsystem_dispatch_gen(Event)])`
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
